# filter-ical

./: .deploy-config.json  .env.development  .env.development.example  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .sstignore  ACCESSIBILITY_IMPROVEMENTS.md  AWS-SETUP-GUIDE.md  BACKUPS.md  CLAUDE.md  CLAUDE_TEMPLATE.md  DEPLOYMENT_ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_POSTMORTEM.md  DEVELOPMENT.md  DEV_WORKFLOW.md  DOMAIN-ARCHITECTURE.md  DOMAIN-BUYING-GUIDE.md  Dockerfile  FILTERING_PLAN.md  FINAL_CI_CD_ARCHITECTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_CHECKLIST.md  INFRASTRUCTURE_ANALYSIS_SYNTHESIS.md  KISS_IMPROVEMENTS.md  MULTI-APP-DEPLOYMENT.md  MULTI_TENANT_PLATFORM_ANALYSIS.md  Makefile  OFFLINE_DETECTION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROP_TYPE_MISMATCHES.md  README-AWS-DEPLOYMENT.md  README-DEPLOYMENT.md  README.dev.md  README.md  REBRANDING_COMPLETE.md  REFACTORING_MASTER_REPORT.md  REFACTORING_SUMMARY.md  (+30 more)
backend/: .coverage  .env.production.ec2.example  .env.production.example  .env.staging.ec2.example  .env.staging.example  .env.testing  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.ecs-old  Dockerfile.lambda-old  Dockerfile.sync  MIGRATION_STRATEGY.md  README_SECRETS.md  __init__.py  add_missing_columns.py  alembic.ini  audit_endpoints.py  data.db  debug_calendar_creation.py  debug_calendar_events.py  debug_ical_export.py  demo_data.py  deps.edn  domains.yaml  lambda_api.py  lambda_handler.py  lambda_sync.py  lambda_sync_main.py  openapi.yaml  pyproject.toml  pytest.ini  repair_database.py  requirements.txt  sst.pyi
backend/alembic/: env.py
backend/alembic/versions/: 0bda720ee4ad_add_calendar_admins_table_for_.py  0u62nu8zsa7m_add_app_settings_table.py  11aaba53b3e3_add_account_lockout_fields.py  1b2daf13c9f7_add_missing_cache_columns.py  1ebb6c1e9f59_add_compound_rules_support.py  21630ea43773_migrate_data_to_domains_table.py  25986e61c39d_initial_schema_with_all_tables.py  291591d9697b_add_unselected_event_ids_to_filters.py  3a51e4bcec06_add_composite_indexes_for_performance.py  5204516d67aa_add_domain_auth_table_for_password_.py  67a59792c235_merge_domain_auth_and_admin_reset_.py  7add62adc884_add_cascade_delete_to_calendar_foreign_.py  85a3a4ab5ad2_add_email_requested_domain_key_and_.py  87933ac25598_add_calendar_id_to_domain_auth.py  893472e90cd9_drop_deprecated_domain_auth_table.py  8d2c8836f283_make_default_password_nullable_in_.py  9a8a8689fab6_create_domains_table_and_add_domain_id_.py  9c9fe9735b5a_populate_group_domain_ids.py  a1b2c3d4e5f6_create_user_account_system.py  ad420dcd7f39_initial_migration_all_tables.py  b4c9e444b42e_add_domain_ownership_and_user_.py  c0c836a5201f_migrate_fernet_to_bcrypt_password_.py  c5d6e7f8g9h0_create_admin_password_reset_tokens_table.py  cc5b28851942_store_admin_password_in_database.py  ed716677d1fb_add_domain_backups_table.py  f6fa43af57c3_add_filtered_calendar_cache_fields_for_.py  fd1683e51aa9_add_domain_requests_table.py
backend/app/: __init__.py  database.py  lambda_handler.py  lambda_sync.py  main.py  models.py
backend/app/core/: auth.py  background_tasks.py  cache.py  clean_deploy.py  config.py  content_type_validator.py  database.py  demo_data.py  domain_calendar.py  domain_setup.py  domains.py  error_handlers.py  error_types.py  exceptions.py  filter_regeneration.py  filters.py  ical_parser.py  messages.py  problem_details.py  rate_limit.py  redis.py  request_size_limiter.py  result.py  retry_handler.py  scheduler.py  security_headers.py
backend/app/data/: __init__.py  auth.py  cache.py  caching.py  calendar.py  database_simple.py  domain_auth.py  filtering.py  filters.py  group.py  grouping.py  ical_parser.py  (+3 more)
backend/config/: domains.yaml
backend/data/: app.db  entries.edn  filters.edn  icalviewer.db  icalviewer.db-shm  icalviewer.db-wal  icalviewer.db.corrupted.backup.20250919_083051  store.pkl
backend/domains/: domains.yaml  exter.yaml
backend/scripts/: reset_database.py
backend/tests/: conftest.py  fixtures.py  test_admin_domain_creation.py  test_api_contract.py  test_api_contracts.py  test_api_endpoints.py  test_auth_dependencies.py  test_cache.py  test_caching_functions.py  test_calendar.py  test_calendar_processing.py  test_contract_compliance.py  test_contract_validation.py  test_contracts.py  test_demo_data.py  test_domain_assignment_rules.py  test_domain_auth_data.py  test_domain_community.py  test_domain_config_export_import.py  test_domain_filter_updates.py  test_domain_requests.py  test_error_handlers.py  test_filtered_calendar_api.py  test_filtered_calendar_cache.py  test_filtering_functions.py  test_grouping.py  test_ical_parser.py  test_integration.py  test_main.py  test_new_functionality.py  test_openapi_contract.py  test_persistence.py  test_public_ical_endpoint.py  test_rfc7807.py  test_rfc7807_integration.py  test_security_functions.py  test_services.py  test_url_validation.py  test_user_authentication.py
(+582 files in other folders)
