[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filter-ical"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "icalendar>=5.0.11",
    "httpx>=0.25.2",
    "slowapi>=0.1.9",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.35.0",
    "mangum>=0.19.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

